--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -180,7 +180,7 @@
                     <RelativeLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/voteprogresscard"
                         android:layout_width="140dp"
-                        android:layout_height="170dp"
+                        android:layout_height="120dp"
                         android:layout_margin="10dp"
                         android:background="@drawable/click_here"
                         android:clickable="true"
@@ -236,7 +236,7 @@
                     <RelativeLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/attendanecard"
                         android:layout_width="140dp"
-                        android:layout_height="170dp"
+                        android:layout_height="120dp"
                         android:layout_margin="10dp"
                         android:background="@drawable/click_here"
                         android:onClick="@{()-> activity.fieldVisitScreen()}"
@@ -301,7 +301,7 @@
                     <RelativeLayout
                         android:id="@+id/cameracard"
                         android:layout_width="140dp"
-                        android:layout_height="170dp"
+                        android:layout_height="120dp"
                         android:layout_margin="10dp"
                         android:background="@drawable/click_here"
                         android:clickable="true"
@@ -356,7 +356,7 @@
                     <RelativeLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/votecountcard"
                         android:layout_width="140dp"
-                        android:layout_height="170dp"
+                        android:layout_height="120dp"
                         android:layout_margin="10dp"
                         android:background="@drawable/click_here"
                         android:clickable="true"
@@ -395,6 +395,72 @@
                                 android:gravity="center"
                                 android:padding="5dp"
                                 android:text="Daily Collection"
+
+                                android:textColor="@android:color/black" />
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="1dp"
+                                android:layout_margin="10dp"
+                                android:background="@drawable/background" />
+
+
+                        </LinearLayout>
+                    </RelativeLayout>
+
+
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/pending"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/bottom"
+                    android:clipToPadding="false"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <RelativeLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                        android:id="@+id/pendingScreen"
+                        android:layout_width="140dp"
+                        android:layout_height="120dp"
+                        android:layout_margin="10dp"
+                        android:background="@drawable/click_here"
+                        android:clickable="true"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:onClick="@{()-> activity.pendingScreen()}"
+                        card_view:cardCornerRadius="5dp"
+                        card_view:cardElevation="3dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/pending_count"
+                                android:layout_width="64dp"
+
+                                android:layout_height="64dp"
+                                android:layout_gravity="center"
+                                android:background="@drawable/cerclebackgroundyello"
+                                android:padding="14dp"
+                                android:src="@drawable/ic_counting"
+                                android:visibility="gone" />
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="1dp"
+                                android:layout_margin="10dp"
+                                android:background="@drawable/background" />
+
+                            <TextView
+                                android:id="@+id/pending_tv"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:padding="5dp"
+                                android:text="Pending Task"
 
                                 android:textColor="@android:color/black" />
 
@@ -483,7 +549,7 @@
                     android:clipToPadding="false"
                     android:gravity="center"
                     android:orientation="horizontal"
-                    android:visibility="visible">
+                    android:visibility="gone">
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/sync"
