--- a/app/src/main/res/layout/exist_trade_submit.xml
+++ b/app/src/main/res/layout/exist_trade_submit.xml
@@ -158,7 +158,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/text"
+                        android:layout_marginLeft="@dimen/margin_left_20dp"
+                        android:layout_marginTop="@dimen/padding"
+                        android:layout_marginRight="@dimen/margin_left_20dp"
+                        android:text="Traders Code"
+                        android:scrollbars="vertical"
+                        android:minLines="15"
+                        android:maxLines="20"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/_15sdp"
+                        android:visibility="visible" />
 
+<!--
                     <LinearLayout
                         android:id="@+id/traders_code_layout"
                         android:layout_width="match_parent"
@@ -546,6 +561,7 @@
                         </RelativeLayout>
 
                     </LinearLayout>
+-->
 
                     <com.google.android.material.floatingactionbutton.FloatingActionButton
                         android:id="@+id/update_image"
