--- a/app/src/main/res/layout/new_trade_licence_screen.xml
+++ b/app/src/main/res/layout/new_trade_licence_screen.xml
@@ -171,12 +171,13 @@
                             android:layout_marginLeft="@dimen/margin_left_20dp"
                             android:layout_marginTop="@dimen/padding"
                             android:layout_marginRight="@dimen/margin_left_20dp"
-                            android:text="Traders Code"
+                            android:text="Trade Code"
                             android:textColor="@android:color/black"
                             android:textSize="@dimen/_15sdp"
                             android:visibility="visible" />
 
                         <RelativeLayout
+                            android:visibility="gone"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/margin_left_20dp"
@@ -202,6 +203,42 @@
                             </com.google.android.material.textfield.TextInputLayout>
 
                         </RelativeLayout>
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/header"
+                            android:layout_marginLeft="@dimen/margin_left_20dp"
+                            android:layout_marginTop="@dimen/padding"
+                            android:layout_marginRight="@dimen/margin_left_20dp"
+                            android:background="@drawable/rectangle_box"
+                            android:orientation="vertical"
+                            android:visibility="visible">
+
+                            <TextView
+
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentStart="true"
+                                android:layout_centerInParent="true"
+
+
+                                android:textColor="@android:color/black"
+                                android:textSize="@dimen/_15sdp"
+                                android:visibility="visible"
+                                customfontdemo:fontName="@string/font_circular_book" />
+
+                            <Spinner
+                                android:id="@+id/trade_code_spinner"
+                                android:layout_width="fill_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentStart="true"
+                                android:layout_alignParentEnd="true"
+                                android:layout_centerInParent="true"
+                                android:layout_marginLeft="10dp"
+                                android:layout_marginRight="10dp"
+                                android:gravity="center" />
+
+                        </RelativeLayout>
+
                     </LinearLayout>
 
                     <LinearLayout
