Existing Trade Licence List

--- a/app/src/main/res/layout/existing_trade_licence.xml
+++ b/app/src/main/res/layout/existing_trade_licence.xml
@@ -201,6 +201,16 @@
 
                         </RelativeLayout>
                     </LinearLayout>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/margin_left_20dp"
+                        android:layout_marginTop="@dimen/padding"
+                        android:layout_marginRight="@dimen/margin_left_20dp"
+                        android:text="Or"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/_15sdp"
+                        android:visibility="visible" />
 
 
                     <LinearLayout
@@ -250,7 +260,16 @@
                         </RelativeLayout>
                     </LinearLayout>
 
-
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/margin_left_20dp"
+                        android:layout_marginTop="@dimen/padding"
+                        android:layout_marginRight="@dimen/margin_left_20dp"
+                        android:text="Or"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/_15sdp"
+                        android:visibility="visible" />
 
                     <LinearLayout
                         android:id="@+id/ward_layout"
