--- a/app/src/main/res/layout/existing_trader_list.xml
+++ b/app/src/main/res/layout/existing_trader_list.xml
@@ -85,7 +85,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="0dp"
-                android:layout_marginBottom="0dp"
+                android:layout_marginBottom="30dp"
                 android:gravity="center">
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
@@ -97,6 +97,28 @@
                     android:scrollbars="vertical"/>
 
 
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_centerInParent="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:id="@+id/no_data_found_layout">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/no_data_icon"
+                    android:scaleType="centerCrop"
+                    android:id="@+id/no_data_img"></ImageView>
+
+                <TextView
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="No Data Found"
+                    android:layout_below="@+id/no_data_img"
+                    android:layout_centerHorizontal="true"></TextView>
             </RelativeLayout>
 
 
