--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -179,10 +179,10 @@
 
                     <RelativeLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/voteprogresscard"
-                        android:layout_width="140dp"
-                        android:layout_height="120dp"
+                        android:layout_width="150dp"
+                        android:layout_height="70dp"
                         android:layout_margin="10dp"
-                        android:background="@drawable/click_here"
+                        android:background="@drawable/triangle_bg"
                         android:clickable="true"
 
                         android:foreground="?android:attr/selectableItemBackground"
@@ -211,6 +211,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="1dp"
                                 android:layout_margin="10dp"
+                                android:visibility="gone"
                                 android:background="@drawable/background" />
 
                             <TextView
@@ -220,13 +221,16 @@
                                 android:gravity="center"
                                 android:padding="5dp"
                                 android:text="Trade Licence"
-
-                                android:textColor="@android:color/black" />
+                                android:textSize="18sp"
+                                android:textStyle="bold"
+                                android:textColor="@color/white" />
 
                             <View
                                 android:layout_width="match_parent"
                                 android:layout_height="1dp"
                                 android:layout_margin="10dp"
+                                android:visibility="gone"
+
                                 android:background="@drawable/background" />
 
 
@@ -235,10 +239,10 @@
 
                     <RelativeLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/attendanecard"
-                        android:layout_width="140dp"
-                        android:layout_height="120dp"
+                        android:layout_width="150dp"
+                        android:layout_height="70dp"
                         android:layout_margin="10dp"
-                        android:background="@drawable/click_here"
+                        android:background="@drawable/triangle_bg"
                         android:onClick="@{()-> activity.fieldVisitScreen()}"
                         android:clickable="true"
                         android:foreground="?android:attr/selectableItemBackground"
@@ -265,6 +269,8 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="1dp"
                                 android:layout_margin="10dp"
+                                android:visibility="gone"
+
                                 android:background="@drawable/background" />
 
                             <TextView
@@ -274,13 +280,16 @@
                                 android:gravity="center"
                                 android:padding="5dp"
                                 android:text="Field Visit"
-
-                                android:textColor="@android:color/black" />
+                                android:textSize="18sp"
+                                android:textStyle="bold"
+                                android:textColor="@color/white" />
 
                             <View
                                 android:layout_width="match_parent"
                                 android:layout_height="1dp"
                                 android:layout_margin="10dp"
+                                android:visibility="gone"
+
                                 android:background="@drawable/background" />
 
 
@@ -300,10 +309,10 @@
 
                     <RelativeLayout
                         android:id="@+id/cameracard"
-                        android:layout_width="140dp"
-                        android:layout_height="120dp"
+                        android:layout_width="150dp"
+                        android:layout_height="70dp"
                         android:layout_margin="10dp"
-                        android:background="@drawable/click_here"
+                        android:background="@drawable/triangle_bg"
                         android:clickable="true"
                         android:foreground="?android:attr/selectableItemBackground"
                         android:onClick="@{()-> activity.assessmentStatusScreen()}"
@@ -331,6 +340,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="1dp"
                                 android:layout_margin="10dp"
+                                android:visibility="gone"
                                 android:background="@drawable/background" />
 
                             <TextView
@@ -340,13 +350,16 @@
                                 android:gravity="center"
                                 android:padding="5dp"
                                 android:text="Assessment Status"
-
-                                android:textColor="@android:color/black" />
+                                android:textSize="18sp"
+                                android:textStyle="bold"
+                                android:textColor="@color/white" />
 
                             <View
                                 android:layout_width="match_parent"
                                 android:layout_height="1dp"
                                 android:layout_margin="10dp"
+                                android:visibility="gone"
+
                                 android:background="@drawable/background" />
 
 
@@ -355,10 +368,10 @@
 
                     <RelativeLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/votecountcard"
-                        android:layout_width="140dp"
-                        android:layout_height="120dp"
+                        android:layout_width="150dp"
+                        android:layout_height="70dp"
                         android:layout_margin="10dp"
-                        android:background="@drawable/click_here"
+                        android:background="@drawable/triangle_bg"
                         android:clickable="true"
                         android:foreground="?android:attr/selectableItemBackground"
                         android:onClick="@{()-> activity.dailyCollectionScreen()}"
@@ -386,6 +399,8 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="1dp"
                                 android:layout_margin="10dp"
+                                android:visibility="gone"
+
                                 android:background="@drawable/background" />
 
                             <TextView
@@ -395,13 +410,16 @@
                                 android:gravity="center"
                                 android:padding="5dp"
                                 android:text="Daily Collection"
-
-                                android:textColor="@android:color/black" />
+                                android:textSize="18sp"
+                                android:textStyle="bold"
+                                android:textColor="@color/white" />
 
                             <View
                                 android:layout_width="match_parent"
                                 android:layout_height="1dp"
                                 android:layout_margin="10dp"
+                                android:visibility="gone"
+
                                 android:background="@drawable/background" />
 
 
@@ -421,10 +439,10 @@
 
                     <RelativeLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/pendingScreen"
-                        android:layout_width="140dp"
-                        android:layout_height="120dp"
+                        android:layout_width="150dp"
+                        android:layout_height="70dp"
                         android:layout_margin="10dp"
-                        android:background="@drawable/click_here"
+                        android:background="@drawable/triangle_bg"
                         android:clickable="true"
                         android:foreground="?android:attr/selectableItemBackground"
                         android:onClick="@{()-> activity.pendingScreen()}"
@@ -452,6 +470,8 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="1dp"
                                 android:layout_margin="10dp"
+                                android:visibility="gone"
+
                                 android:background="@drawable/background" />
 
                             <TextView
@@ -461,13 +481,16 @@
                                 android:gravity="center"
                                 android:padding="5dp"
                                 android:text="Pending Task"
-
-                                android:textColor="@android:color/black" />
+                                android:textSize="18sp"
+                                android:textStyle="bold"
+                                android:textColor="@color/white" />
 
                             <View
                                 android:layout_width="match_parent"
                                 android:layout_height="1dp"
                                 android:layout_margin="10dp"
+                                android:visibility="gone"
+
                                 android:background="@drawable/background" />
 
 
