--- a/app/src/main/res/layout/existing_trade_details_view.xml
+++ b/app/src/main/res/layout/existing_trade_details_view.xml
@@ -922,16 +922,16 @@
                         android:visibility="visible">
 
                         <TextView
-
-                            android:layout_width="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_alignParentStart="true"
                             android:layout_centerInParent="true"
-
-
+                            android:id="@+id/ward_name_text"
                             android:textColor="@android:color/black"
                             android:textSize="@dimen/_15sdp"
                             android:visibility="visible"
+                            android:paddingLeft="@dimen/_10sdp"
                             customfontdemo:fontName="@string/font_circular_book" />
 
                         <Spinner
@@ -979,15 +979,15 @@
                         android:visibility="visible">
 
                         <TextView
-
-                            android:layout_width="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_alignParentStart="true"
                             android:layout_centerInParent="true"
-
-
+                            android:id="@+id/street_name_text"
                             android:textColor="@android:color/black"
                             android:textSize="@dimen/_15sdp"
+                            android:paddingLeft="@dimen/_10sdp"
                             android:visibility="visible"
                             customfontdemo:fontName="@string/font_circular_book" />
 
