--- a/app/src/main/res/layout/assessment_status_new.xml
+++ b/app/src/main/res/layout/assessment_status_new.xml
@@ -215,8 +215,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="200dp"
-                android:layout_marginBottom="60dp"
+                android:layout_marginTop="150dp"
+                android:layout_marginBottom="20dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:visibility="visible"
@@ -230,266 +230,55 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:padding="10dp"
+                    android:background="@drawable/cornered_border_bg"
+                    android:layout_margin="0dp"
+                    android:elevation="@dimen/_6sdp"
                     android:orientation="vertical">
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:padding="8dp"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:id="@+id/header"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:visibility="visible"
+                            android:layout_centerHorizontal="true"
+                            android:text="Assessment Status"
+                            android:layout_centerVertical="true"
+                            android:textAlignment="center"
+                            android:layout_gravity="center"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="@dimen/_15sdp"
+                            android:textStyle="bold" />
+
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@mipmap/close_icon"
                             android:id="@+id/close"
+                            android:layout_marginLeft="5dp"
+                            android:layout_centerVertical="true"
+                            android:layout_alignParentRight="true"
                             android:onClick="@{()-> activity.closeDetails()}"
                             android:layout_gravity="right"/>
 
-                    </LinearLayout>
-    <ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    customfontdemo:ignore="ScrollViewCount">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-                    <LinearLayout
-                        android:id="@+id/id_layout"
+                    </RelativeLayout>
+
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <TextView
+                        android:layout_height="wrap_content">
+                        <androidx.recyclerview.widget.RecyclerView
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/margin_left_20dp"
-                            android:layout_marginTop="@dimen/padding"
-                            android:layout_marginRight="@dimen/margin_left_20dp"
-                            android:text="Assessment Id"
-                            android:textColor="@android:color/black"
-                            android:textSize="@dimen/_15sdp"
-                            android:visibility="visible" />
-
-                        <RelativeLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/margin_left_20dp"
-                            android:layout_marginTop="@dimen/padding"
-                            android:layout_marginRight="@dimen/margin_left_20dp"
-                            android:orientation="vertical">
-
-                            <com.google.android.material.textfield.TextInputLayout
-                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-
-                                android:hint="Assessment Id">
-
-                                <com.google.android.material.textfield.TextInputEditText
-                                    android:id="@+id/assessment_id_tv"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:inputType="textPersonName" />
-
-                            </com.google.android.material.textfield.TextInputLayout>
-
-                        </RelativeLayout>
-                    </LinearLayout>
-                    <LinearLayout
-                        android:id="@+id/applicant_layout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/name_layout"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/margin_left_20dp"
-                            android:layout_marginTop="@dimen/padding"
-                            android:layout_marginRight="@dimen/margin_left_20dp"
-                            android:text="Applicant Name"
-                            android:textColor="@android:color/black"
-                            android:textSize="@dimen/_15sdp"
+                            android:layout_height="match_parent"
+                            android:id="@+id/recycler"
+                            android:scrollbarSize="1dp"
+                            android:padding="10dp"
                             android:visibility="visible"
-                            customfontdemo:fontName="@string/font_circular_medium" />
+                            android:scrollbars="vertical"/>
 
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/header"
-                            android:layout_marginLeft="@dimen/margin_left_20dp"
-                            android:layout_marginTop="@dimen/padding"
-                            android:layout_marginRight="@dimen/margin_left_20dp"
-                            android:background="@drawable/rectangle_box"
-                            android:orientation="vertical"
-                            android:visibility="visible">
-
-                            <TextView
-                                android:id="@+id/applicant_name_tv"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentStart="true"
-                                android:layout_centerInParent="true"
-                                android:layout_marginLeft="@dimen/margin_left_20dp"
-                                android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text=""
-
-                                android:textColor="@android:color/black"
-                                android:textSize="@dimen/_15sdp"
-                                android:visibility="visible"
-                                customfontdemo:fontName="@string/font_circular_book" />
-
-
-                        </RelativeLayout>
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:id="@+id/father_layout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/name_layout"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/margin_left_20dp"
-                            android:layout_marginTop="@dimen/padding"
-                            android:layout_marginRight="@dimen/margin_left_20dp"
-                            android:text="Father Name"
-                            android:textColor="@android:color/black"
-                            android:textSize="@dimen/_15sdp"
-                            android:visibility="visible"
-                            customfontdemo:fontName="@string/font_circular_medium" />
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/header"
-                            android:layout_marginLeft="@dimen/margin_left_20dp"
-                            android:layout_marginTop="@dimen/padding"
-                            android:layout_marginRight="@dimen/margin_left_20dp"
-                            android:background="@drawable/rectangle_box"
-                            android:orientation="vertical"
-                            android:visibility="visible">
-
-                            <TextView
-                                android:id="@+id/father_name_tv"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentStart="true"
-                                android:layout_centerInParent="true"
-                                android:layout_marginLeft="@dimen/margin_left_20dp"
-                                android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text=""
-
-                                android:textColor="@android:color/black"
-                                android:textSize="@dimen/_15sdp"
-                                android:visibility="visible"
-                                customfontdemo:fontName="@string/font_circular_book" />
-
-
-                        </RelativeLayout>
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:id="@+id/address_layout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/name_layout"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/margin_left_20dp"
-                            android:layout_marginTop="@dimen/padding"
-                            android:layout_marginRight="@dimen/margin_left_20dp"
-                            android:text="Address"
-                            android:textColor="@android:color/black"
-                            android:textSize="@dimen/_15sdp"
-                            android:visibility="visible"
-                            customfontdemo:fontName="@string/font_circular_medium" />
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/header"
-                            android:layout_marginLeft="@dimen/margin_left_20dp"
-                            android:layout_marginTop="@dimen/padding"
-                            android:layout_marginRight="@dimen/margin_left_20dp"
-                            android:background="@drawable/rectangle_box"
-                            android:orientation="vertical"
-                            android:visibility="visible">
-
-                            <TextView
-                                android:id="@+id/address_tv"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentStart="true"
-                                android:layout_centerInParent="true"
-                                android:layout_marginLeft="@dimen/margin_left_20dp"
-                                android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text=""
-
-                                android:textColor="@android:color/black"
-                                android:textSize="@dimen/_15sdp"
-                                android:visibility="visible"
-                                customfontdemo:fontName="@string/font_circular_book" />
-
-
-                        </RelativeLayout>
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:id="@+id/area_layout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/margin_left_20dp"
-                            android:layout_marginTop="@dimen/padding"
-                            android:layout_marginRight="@dimen/margin_left_20dp"
-                            android:text="Area SQ Feet"
-                            android:textColor="@android:color/black"
-                            android:textSize="@dimen/_15sdp"
-                            android:visibility="visible"
-                            customfontdemo:fontName="@string/font_circular_medium" />
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/header"
-                            android:layout_marginLeft="@dimen/margin_left_20dp"
-                            android:layout_marginTop="@dimen/padding"
-                            android:layout_marginRight="@dimen/margin_left_20dp"
-                            android:layout_marginBottom="30dp"
-                            android:background="@drawable/rectangle_box"
-                            android:orientation="vertical"
-                            android:visibility="visible">
-
-                            <TextView
-                                android:id="@+id/area_tv"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentStart="true"
-                                android:layout_centerInParent="true"
-                                android:layout_marginLeft="@dimen/margin_left_20dp"
-                                android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text=""
-
-                                android:textColor="@android:color/black"
-                                android:textSize="@dimen/_15sdp"
-                                android:visibility="visible"
-                                customfontdemo:fontName="@string/font_circular_book" />
-
-
-                        </RelativeLayout>
-
-                    </LinearLayout>
-        </LinearLayout>
-</ScrollView>
-
+                    </RelativeLayout>
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
