--- a/app/src/main/res/layout/existing_trade_licence.xml
+++ b/app/src/main/res/layout/existing_trade_licence.xml
@@ -471,7 +471,10 @@
 
 
                     </LinearLayout>
-
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center">
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_register"
                         android:layout_width="wrap_content"
@@ -489,7 +492,25 @@
                         android:textAllCaps="false"
                         android:textColor="@android:color/black"
                         android:textSize="@dimen/_15sdp" />
-
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btn_clear"
+                        android:layout_toRightOf="@+id/btn_register"
+                        android:layout_width="wrap_content"
+                        android:layout_height="@dimen/_40sdp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginLeft="@dimen/margin"
+                        android:layout_marginTop="@dimen/_40sdp"
+                        android:layout_marginRight="@dimen/margin"
+                        android:layout_marginBottom="@dimen/_40sdp"
+                        android:background="@drawable/click_here"
+                        android:clickable="true"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:text="Clear"
+                        android:onClick="@{()-> activity.clearDetails()}"
+                        android:textAllCaps="false"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/_15sdp" />
+                    </RelativeLayout>
                 </LinearLayout>
             </RelativeLayout>
         </androidx.core.widget.NestedScrollView>
