--- a/app/src/main/res/layout/existing_trader_list.xml
+++ b/app/src/main/res/layout/existing_trader_list.xml
@@ -106,9 +106,9 @@
                 android:id="@+id/no_data_found_layout">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/no_data_icon"
+                    android:layout_width="250dp"
+                    android:layout_height="150dp"
+                    android:src="@drawable/no_data_ic"
                     android:scaleType="centerCrop"
                     android:id="@+id/no_data_img"></ImageView>
 
