--- a/app/src/main/res/layout/existing_trade_licence.xml
+++ b/app/src/main/res/layout/existing_trade_licence.xml
@@ -288,6 +288,7 @@
 
                                 <com.google.android.material.textfield.TextInputEditText
                                     android:id="@+id/mobile_no"
+                                    android:maxLength="10"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:inputType="number" />
