Field Visit API call and store Local add xml files for field visit adapter Pending Screen

--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -75,7 +75,7 @@
                     android:adjustViewBounds="true"
                     android:background="@drawable/logout_variant"
                     android:backgroundTint="@android:color/white"
-                    android:onClick="@{()-> activity.closeApplication()}"
+                    android:onClick="@{()-> activity.logout()}"
                     android:scaleType="centerInside" />
 
 
