--- a/app/src/main/res/layout/gallery_thumbnail.xml
+++ b/app/src/main/res/layout/gallery_thumbnail.xml
@@ -11,7 +11,40 @@
     android:background="@android:color/white"
     android:orientation="vertical"
     tools:ignore="MissingClass">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
 
+            <ImageView
+                android:id="@+id/thumbnail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="@dimen/_1sdp"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/close_dialog"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="top|right"
+            android:adjustViewBounds="true"
+            android:background="@mipmap/close_icon"
+            android:description="@null"
+            android:scaleType="fitStart" />
+
+    </RelativeLayout>
+<!--
     <ImageView
         android:id="@+id/thumbnail"
         android:layout_width="match_parent"
@@ -19,5 +52,6 @@
         android:padding="@dimen/_1sdp"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop" />
+-->
 </com.nic.TPTaxDepartment.Support.SquareLayout>
 </layout>
