FieldVisit  Design changes

--- a/app/src/main/res/layout/gallery_thumbnail.xml
+++ b/app/src/main/res/layout/gallery_thumbnail.xml
@@ -30,7 +30,7 @@
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/close_dialog"
+            android:id="@+id/close_icon"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginTop="5dp"
