Field Visit API call and store Local add xml files for field visit adapter Pending Screen

--- a/app/src/main/res/layout/field_visit_recycler.xml
+++ b/app/src/main/res/layout/field_visit_recycler.xml
@@ -223,7 +223,7 @@
                 android:layout_width="@dimen/_30sdp"
                 android:layout_height="@dimen/_30sdp"
                 android:id="@+id/imge_list"
-                android:src="@drawable/gallery_icon"></ImageView>
+                android:src="@drawable/ic_gallery"></ImageView>
         </RelativeLayout>
         <LinearLayout
             android:layout_width="match_parent"
